priscilla_solari.html

--- a/priscilla_solari.html
+++ b/priscilla_solari.html
@@ -93,7 +93,7 @@
             </p>
            
            <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/AhbwXnD0Ma8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/873401494?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" width="1920" height="1080" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="video descoser"></iframe>
 <br>
       </div>
     </div>
