--- a/priscilla_solari.html
+++ b/priscilla_solari.html
@@ -39,7 +39,7 @@
             <!--<a href="https://www.laloica.com/" target="_blank"><img width="60" height="60"
                 src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a> -->
 
-            <a href="https://www.instagram.com/priscillasolarioyarzo/" target="_blank"><img width="60" height="60"
+            <a href="https://www.instagram.com/proyectodescoser/" target="_blank"><img width="60" height="60"
                 src="https://img.icons8.com/dotty/80/instagram-new.png" alt="instagram-new" /></a>
 
             <!--<a href="#" target="_blank"><img width="60" height="60"
