maria_rosa_lizama.html

--- a/maria_rosa_lizama.html
+++ b/maria_rosa_lizama.html
@@ -51,10 +51,11 @@
               presentará su colaboración con el cineasta Leo Medel y su trabajo conjunto en torno a la
               representación del dolor.
             </p>
+            <a href="https://colon636.cl/" target=null> https://colon636</a>
 
             <div class="d-flex justify-content-center align-items-center">
               <!-- <a href="#" target="_blank"><img width="60" height="60"
-                  src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a>
+                 src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a>
 
               <a href="#" target="_blank"><img width="60" height="60"
                   src="https://img.icons8.com/dotty/80/instagram-new.png" alt="instagram-new" /></a>
