--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">SITIO 23</h1>
-        <a href="https://git.io/typing-svg"><img
+        <a href="https://www.instagram.com/descentrandocl/"><img
             src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
             alt="Typing SVG" />
         </a>
