--- a/rapa_nui.html
+++ b/rapa_nui.html
@@ -42,6 +42,15 @@
               Te invitamos a conocer el Programa Audiovisual Rapa Nui junto a Leo Pakarati, Paula Rossetti, Nicole
               Albornoz Tenderini y Sebastián Pakarati.
               <br><br>
+Te Kuhane o te Tupuna: El Espíritu de los Ancestros (2015) 
+Director Leo Pakarati, Productora Paula Rossetti Arredondo
+
+Ivi Mana (2023)
+Sebastián Pakarati
+
+Te Mana Hakaara: El Poder que Permanece (2023)
+Nikole Albornoz Tenderini 
+
               Conoce la historia del viaje del artista Bene Tuki y su nieta junto al cineasta Leo Pakarati a Londres a
               visitar el moai Hoa Hakananai'a conservado en el Museo Británico de Londres
               <br><br>
@@ -74,7 +83,7 @@
               En Sitio 23 también presentamos el trabajo de la realizadora audiovisual Nikole Albornoz Tenderini, Nikole
               ha trabajado en la preservación de valiosos registros cinematográficos en 35mm, en la actualidad, se
               dedica a la creación de contenido audiovisual y multimedia desde Rapa Nui. <br><br>
-              En Sitio 23, desde el 30 de Septiembre hasta el 25 de Octubre en el Parque Cultural de Valparaíso
+              En Sitio 23, desde el 30 de Septiembre hasta el 25 de Octubre en el Parque Cultural de Valparaíso.
             </p>
             <!--
             <div class="d-flex justify-content-center align-items-center">
