--- a/rapa_nui.html
+++ b/rapa_nui.html
@@ -43,13 +43,10 @@
               Albornoz Tenderini y Sebastián Pakarati.
               <br><br>
 Te Kuhane o te Tupuna: El Espíritu de los Ancestros (2015) 
-Director Leo Pakarati, Productora Paula Rossetti Arredondo
-
-Ivi Mana (2023)
-Sebastián Pakarati
-
+Director Leo Pakarati, Productora Paula Rossetti Arredondo<br>
+Ivi Mana (2023) de Sebastián Pakarati<br>
 Te Mana Hakaara: El Poder que Permanece (2023)
-Nikole Albornoz Tenderini 
+Nikole Albornoz Tenderini<br> 
 
               Conoce la historia del viaje del artista Bene Tuki y su nieta junto al cineasta Leo Pakarati a Londres a
               visitar el moai Hoa Hakananai'a conservado en el Museo Británico de Londres
@@ -82,7 +79,7 @@ Nikole Albornoz Tenderini
               por la Compañía Explotadora de la Isla de Pascua (CEDIP). <br><br>
               En Sitio 23 también presentamos el trabajo de la realizadora audiovisual Nikole Albornoz Tenderini, Nikole
               ha trabajado en la preservación de valiosos registros cinematográficos en 35mm, en la actualidad, se
-              dedica a la creación de contenido audiovisual y multimedia desde Rapa Nui. <br><br>
+              dedica a la creación de contenido audiovisual y multimedia desde Rapa Nui. Presentamos su reel de la reciente puesta en escena del Teatro la Huella en Rapa Nui<br><br>
               En Sitio 23, desde el 30 de Septiembre hasta el 25 de Octubre en el Parque Cultural de Valparaíso.
             </p>
             <!--
