--- a/rapa_nui.html
+++ b/rapa_nui.html
@@ -45,8 +45,7 @@
 Te Kuhane o te Tupuna: El Espíritu de los Ancestros (2015) 
 Director Leo Pakarati, Productora Paula Rossetti Arredondo<br>
 Ivi Mana (2023) de Sebastián Pakarati<br>
-Te Mana Hakaara: El Poder que Permanece (2023)
-Nikole Albornoz Tenderini<br> 
+Te Mana Hakaara: El Poder que Permanece (2023) de Nikole Albornoz Tenderini<br> 
 
               Conoce la historia del viaje del artista Bene Tuki y su nieta junto al cineasta Leo Pakarati a Londres a
               visitar el moai Hoa Hakananai'a conservado en el Museo Británico de Londres
