barbara_gonzalez.html

--- a/barbara_gonzalez.html
+++ b/barbara_gonzalez.html
@@ -17,7 +17,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">BÁRBARA GONZÁLEZ / SITIO 23</h1>
-        <a href="https://git.io/typing-svg"><img
+        <a href="https://www.instagram.com/descentrandoCL"><img
             src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
             alt="Typing SVG" /></a>
         <p>
