--- a/1_VitrinaAlfareria.html
+++ b/1_VitrinaAlfareria.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Bárbara González - Sitio 23</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  <title>1. MHO-ORIGINAL_SALA HUILLICHE_Vitrina Alfarería</title>
+  <link href="https://soundcloud.com/audioguia-mhmo" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -16,8 +16,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">BÁRBARA GONZÁLEZ / SITIO 23</h1>
-        <a href="https://www.instagram.com/descentrandoCL"><img
+        <h1 class="">1. MHO-ORIGINAL_SALA HUILLICHE_Vitrina Alfarería</h1>
+        <a href="https://soundcloud.com/audioguia-mhmo"><img
             src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
             alt="Typing SVG" /></a>
         <p>
@@ -37,7 +37,7 @@
           <img src="asset/img/barbaraGonzalez.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
-            <a href="http://barbaragonzalez.cl/" target="_blank"><img width="60" height="60"
+            <a href="https://soundcloud.com/" target="_blank"><img width="60" height="60"
                 src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a>
 
             <a href="https://www.instagram.com/barbaragonzalez.b/" target="_blank"><img width="60" height="60"
