--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">SITIO 23</h1>
-        <a href="https://www.instagram.com/descentrandocl/"><img
+        <h1 class="">AUDIOGUÍA MHMO</h1>
+        <a href="https://soundcloud.com/audioguia-mhmo"><img
             src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
             alt="Typing SVG" />
         </a>
