--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Sitio 23 Festival de Nuevos Medios</title>
+  <title>AUDIOGUÍA MHMO</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -49,7 +49,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="barbara_gonzalez.html">
+            <a href="1vitrinaalfareria.html">
               <img src="asset/img/barbaraGonzalez.jpg" class="card-img" alt="...">
             </a>
           </div>
