--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="1vitrinaalfareria.html">
+            <a href="1_VitrinaAlfareria.html">
               <img src="asset/img/barbaraGonzalez.jpg" class="card-img" alt="...">
             </a>
           </div>
