--- a/1_VitrinaAlfareria.html
+++ b/1_VitrinaAlfareria.html
@@ -18,7 +18,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">AUDIOGUIA</h1>
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUIA</a>
         </p>
       </div>
     </div>
