--- a/1_VitrinaAlfareria.html
+++ b/1_VitrinaAlfareria.html
@@ -31,7 +31,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/barbaraGonzalez.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/1_alfareria.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             <a href="http://barbaragonzalez.cl/" target="_blank"><img width="60" height="60"
