--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
             <a href="1_VitrinaAlfareria.html">
-              <img src="asset/img/barbaraGonzalez.jpg" class="card-img" alt="...">
+              <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
