--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
-
 <body>
 
   <!-- Encabezado -->
@@ -54,7 +53,7 @@
         <div class="col product-item" category="radio">
           <div class="card shadow-sm">
             <a href="chercan_radio.html">
-              <img src="asset/img/chercanRadio.jpg" class="card-img" alt="...">
+              <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -62,7 +61,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="endofobia.html">
-              <img src="asset/img/endofobia.jpg" class="card-img" alt="...">
+              <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -70,7 +69,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="graciela_munoz.html">
-              <img src="asset/img/gracielaMunoz.jpg" class="card-img" alt="...">
+              <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -78,7 +77,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="hypereikon.html">
-              <img src="asset/img/hypereikon.jpg" class="card-img" alt="...">
+              <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -86,7 +85,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="kamila_govorcin.html">
-              <img src="asset/img/kamilaGovorcin.jpg" class="card-img" alt="...">
+              <img src="asset/img/6_VitrinaK.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
