--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="orquesta_pandroginia.html">
-              <img src="asset/img/orquestaPandroginia.jpg" class="card-img" alt="...">
+              <img src="asset/img/8_DioramaRuka.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="paltamango.html">
-              <img src="asset/img/paltamango.jpg" class="card-img" alt="...">
+              <img src="asset/img/9_cedulatrutruka.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -117,7 +117,7 @@
         <div class="co product-item" category="piso3, piso1">
           <div class="card shadow-sm">
             <a href="priscilla_solari.html">
-              <img src="asset/img/priscillaSolari.jpg" class="card-img" alt="...">
+              <img src="asset/img/10_artefactoslíticos.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
             <a href="rapa_nui.html">
-              <img src="asset/img/rapaNui.jpg" class="card-img" alt="...">
+              <img src="asset/img/11_Salacanoas.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -133,7 +133,7 @@
         <div class="col product-item" category="conversatorios">
           <div class="card shadow-sm">
             <a href="maria_rosa_lizama.html">
-              <img src="asset/img/rosaMariaLizama.jpg" class="card-img" alt="...">
+              <img src="asset/img/12_Wenteyao.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -141,7 +141,7 @@
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
             <a href="loica.html">
-              <img src="asset/img/laLoica.jpg" class="card-img" alt="...">
+              <img src="" class="card-img" alt="...">
             </a>
           </div>
         </div>
