--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
             <a href="loica.html">
-              <img src="" class="card-img" alt="...">
+              <img src="asset/img/10_artefactoslíticos.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -149,7 +149,7 @@
         <div class="col product-item" category="conversatorios">
           <div class="card shadow-sm">
             <a href="trinidad_ordenes.html">
-              <img src="asset/img/trinidadOrdenes.jpg" class="card-img" alt="...">
+              <img src="asset/img/1_VitrinaPleistoceno.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -157,7 +157,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="valentina_camila.html">
-              <img src="asset/img/valentinaVillarroelCamilaCijka.jpg" class="card-img" alt="...">
+              <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -165,7 +165,7 @@
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="taller_rata_elektrika.html">
-              <img src="asset/img/rataElektrica.jpg" class="card-img" alt="...">
+              <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -173,7 +173,7 @@
         <div class="col product-item" category="piso4, conversatorios">
           <div class="card shadow-sm">
             <a href="sindicato_shadows.html">
-              <img src="asset/img/sindicatoAfrodita.jpg" class="card-img" alt="...">
+              <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -181,7 +181,7 @@
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="nube.html">
-              <img src="asset/img/nube.jpg" class="card-img" alt="...">
+              <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
         </div>
@@ -189,7 +189,7 @@
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
             <a href="happy_hackers.html">
-              <img src="asset/img/festivalsitio23.jpg" class="card-img" alt="...">
+              <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
 
             </a>
             <p>Happy Hackers</p>
