--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
         <h1 class="">AUDIOGUÍA MHMO</h1>
              <!-- Botonera -->
         <div class="category_list">
-          <a href="#" class="btn btn-secondary my-2 category_item" category="piso1">Piso 1</a>
-          <a href="#" class="btn btn-secondary my-2 category_item" category="piso2">Piso 2</a>
-          <a href="#" class="btn btn-secondary my-2 category_item" category="piso3">Piso 3</a>
+          <a href="#" class="btn btn-secondary my-2 category_item" category="piso1">Sala Huilliche</a>
+          <a href="#" class="btn btn-secondary my-2 category_item" category="piso2">Sala Prehistoria</a>
+         <!-- Botonera  <a href="#" class="btn btn-secondary my-2 category_item" category="piso3">Piso 3</a>
           <a href="#" class="btn btn-secondary my-2 category_item" category="piso4">Piso 4</a>
         </div>
         <div class="category_list">
           <a href="#" class="btn btn-secondary my-2 category_item" category="conciertos">Conciertos/Proyecciones</a>
           <a href="#" class="btn btn-secondary my-2 category_item" category="conversatorios">Conversatorios</a>
           <a href="#" class="btn btn-secondary my-2 category_item" category="radio">Radio</a>
+        -->
         </div>
         <div class="category_list">
-          <a href="#" class="btn btn-secondary my-2 category_item" category="all">Todo Sitio23</a>
+          <a href="#" class="btn btn-secondary my-2 category_item" category="all">Toda la Audioguía</a>
         </div>
 
       </div>
