--- a/1_VitrinaAlfareria.html
+++ b/1_VitrinaAlfareria.html
@@ -16,7 +16,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">AUDIOGUIA</h1>
+        <h1 class="">AUDIOGUIA MHMO</h1>
         <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUIA</a>
         </p>
@@ -33,6 +33,7 @@
         <div class="col-md-4">
           <img src="asset/img/1_alfareria.jpg" class="img-fluid rounded-start" alt="...">
           <br>
+          <!----------
           <div class="d-flex justify-content-center align-items-center">
             <a href="http://barbaragonzalez.cl/" target="_blank"><img width="60" height="60"
                 src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a>
@@ -47,28 +48,13 @@
                 src="https://img.icons8.com/dotty/80/soundcloud.png" alt="soundcloud" /></a>
 
           </div>
+          --->
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Bárbara González</h5>
+            <h5 class="card-title">1 Vitrina Alfarería</h5>
             <p class="card-text">
-              Barbara Gonzalez realiza una intervención performativa radial el 30 de Septiembre a las 17.00 hrs como
-              parte de la inauguración del Festival Sitio 23 en la explanada del segundo piso del Parque Cultural de
-              Valparaíso.
-              <br><br>
-              Bárbara Alejandra González Barrera. Originaria de Santiago de Chile,es una artista sonora y visual
-              chilena. Graduada en la Universidad de Chile en 2007 con distinción máxima como pintora, Bárbara se ha
-              destacado por su obra Acción Rizoma. A lo largo de su carrera, ha participado en exposiciones y encuentros
-              nacionales e internacionales, como el Museo Nacional Centro de Arte Reina Sofía de Madrid y el Festival de
-              Arte Sonoro Tsonami de Valparaíso, entre otros.
-              <br><br>
-              Su enfoque artístico implica la observación de su entorno y la experimentación con materiales encontrados,
-              como chatarra, casetes y juguetes. A partir de estos materiales, crea ensamblajes sonoro-visuales que
-              involucran su propio cuerpo como un agente más, generando performances que dialogan con el espacio y el
-              tiempo, invitando a los espectadores a percibir nuevas posibilidades poéticas de los objetos y sus
-              relaciones, a través de la estimulación sonora. Su trabajo explora la relación espacio/temporal de una
-              manera que cautiva y estimula los sentidos presentando en diversos formatos, como video, experiencias
-              sonoras, dibujos e instalaciones.
+              Alfarería.
             </p>
 
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
