--- a/1_VitrinaAlfareria.html
+++ b/1_VitrinaAlfareria.html
@@ -57,10 +57,7 @@
               Alfarería.
             </p>
 
-            <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/barbaragonzalezbarrera/ventanas-al-aire?si=883007e740b94e0d905498af3ec47ab8&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
-
-          </div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1593847044&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/alfareria-mapuche" title="Alfareria Mapuche" target="_blank" style="color: #cccccc; text-decoration: none;">Alfareria Mapuche</a></div>
         </div>
       </div>
     </div>
