--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="col product-item" category="radio">
           <div class="card shadow-sm">
-            <a href="chercan_radio.html">
+            <a href="2_VitrinaHibridacion.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
