--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
-            <a href="endofobia.html">
+            <a href="3_CeramicaEtnografica.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
