--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
-            <a href="graciela_munoz.html">
+            <a href="4_MaterialidadMapuche.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
