--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
-            <a href="hypereikon.html">
+            <a href="5_Vitrina_Piedras.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
@@ -85,7 +85,7 @@
 
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
-            <a href="kamila_govorcin.html">
+            <a href="6_TextilesMapucheWiyiche.html">
               <img src="asset/img/6_VitrinaK.jpg" class="card-img" alt="...">
             </a>
           </div>
