--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
-            <a href="orquesta_pandroginia.html">
+            <a href="8_DioramaRuka.html">
               <img src="asset/img/8_DioramaRuka.jpg" class="card-img" alt="...">
             </a>
           </div>
@@ -109,7 +109,7 @@
 
         <div class="col product-item" category="conciertos">
           <div class="card shadow-sm">
-            <a href="paltamango.html">
+            <a href="9_Trutruka.html">
               <img src="asset/img/9_cedulatrutruka.jpg" class="card-img" alt="...">
             </a>
           </div>
@@ -117,7 +117,7 @@
 
         <div class="co product-item" category="piso3, piso1">
           <div class="card shadow-sm">
-            <a href="priscilla_solari.html">
+            <a href="10_.html">
               <img src="asset/img/10_artefactoslíticos.jpg" class="card-img" alt="...">
             </a>
           </div>
