--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="col product-item" category="piso3, conciertos">
           <div class="card shadow-sm">
-            <a href="mube.html">
+            <a href="7_Joyeria.html">
               <img src="asset/img/7_VitrinasGemelas.jpg" class="card-img" alt="...">
             </a>
           </div>
