--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 products-list">
 
-        <div class="col product-item" category="piso2">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="1_VitrinaAlfareria.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="radio">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="2_VitrinaHibridacion.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
@@ -59,7 +59,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="3_CeramicaEtnografica.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="4_MaterialidadMapuche.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
@@ -75,7 +75,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="5_Vitrina_Piedras.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
@@ -83,7 +83,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="6_TextilesMapucheWiyiche.html">
               <img src="asset/img/6_VitrinaK.jpg" class="card-img" alt="...">
@@ -91,7 +91,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="piso3, conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="7_Joyeria.html">
               <img src="asset/img/7_VitrinasGemelas.jpg" class="card-img" alt="...">
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="8_DioramaRuka.html">
               <img src="asset/img/8_DioramaRuka.jpg" class="card-img" alt="...">
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-        <div class="col product-item" category="conciertos">
+        <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
             <a href="9_Trutruka.html">
               <img src="asset/img/9_cedulatrutruka.jpg" class="card-img" alt="...">
@@ -115,9 +115,9 @@
           </div>
         </div>
 
-        <div class="co product-item" category="piso3, piso1">
+        <div class="co product-item" category="piso1">
           <div class="card shadow-sm">
-            <a href="10_.html">
+            <a href="10_ArtefactosLiticos.html">
               <img src="asset/img/10_artefactoslíticos.jpg" class="card-img" alt="...">
             </a>
           </div>
