--- a/2_VitrinaHibridacion.html
+++ b/2_VitrinaHibridacion.html
@@ -15,7 +15,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">CHERCAN RADIO / SITIO 23</h1>
+        <h1 class="">VITRINA HIBRIDACIÓN</h1>
         <a href="https://git.io/typing-svg"><img
             src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
             alt="Typing SVG" /></a>
@@ -33,7 +33,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/chercanRadio.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/1_alfareria.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             <a href="https://chercanradio.org/" target="_blank"><img width="60" height="60"
@@ -48,15 +48,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">CHERCAN RADIO</h5>
+            <h5 class="card-title">VITRINA HIBRIDACIÓN</h5>
             <p class="card-text">
-              Chercan Radio es un proyecto de radio experimental que ha estado transmitiendo desde 2020. Su misión es
-              fomentar una cultura de respeto, conocimiento libre y apoyo mutuo a través de la autogestión. La radio
-              brinda un espacio a expresiones sonoras que desafían las normas convencionales de la industria musical.
-              <br><br>
-              Chercan Radio explicita no tolerar expresiones autoritarias, como el fascismo, el racismo, el machismo, la
-              homofobia y cualquier forma de discriminación o violencia hacia minorías. Su objetivo es crear un espacio
-              inclusivo y seguro para la diversidad de voces y perspectivas.
+              
 
 
             </p>
