--- a/3_CeramicaEtnografica.html
+++ b/3_CeramicaEtnografica.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Endofobia - Sitio 23</title>
+  <title>CERÁMICA ETNOGRÁFICA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -15,7 +15,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">ENDOFOBIA / SITIO 23</h1>
+        <h1 class="">CERÁMICA ETNOGRÁFICA</h1>
         <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero" alt="Typing SVG" /></a>
         <p>
           <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
@@ -54,12 +54,7 @@
           <div class="card-body">
             <h5 class="card-title">ENDOFOBIA</h5>
             <p class="card-text">
-            Está presente en la escena electrónica como parte de @clubquimera produciendo  Fiestas Club Quimera que manifiestan  "Cero tolerancia con actitudes machistas, fascistas y abusivas" 
-Endofobia publica su música usando medios obsoletos (old media) como el casete. El año 2017 publicó 20 copias en casete transparente ME12 ENDOFOBIA - ABANDONO DE SÍ . 
-<br><br>
-
-Ven a conocer la propuesta sonora de ENDOFOBIA en Sitio 23 el 30 de Septiembre en el Parque Cultural de Valparaíso.
-
+       
 
             </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/endofobia/endofobia-mix-16082023?si=67ea6392e4414a6193ec26ef9cfbcd47&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
