--- a/5_VitrinaPiedras.html
+++ b/5_VitrinaPiedras.html
@@ -33,7 +33,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/hypereikon.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/1_alfareria.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             <a href="https://hypereikon.glitch.me/" target="_blank"><img width="60" height="60"
