--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
-            <a href="5_Vitrina_Piedras.html">
+            <a href="5_VitrinaPiedras.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
