--- a/2_VitrinaHibridacion.html
+++ b/2_VitrinaHibridacion.html
@@ -18,7 +18,7 @@
         <h1 class="">VITRINA HIBRIDACIÓN</h1>
        
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
     </div>
