--- a/3_CeramicaEtnografica.html
+++ b/3_CeramicaEtnografica.html
@@ -18,7 +18,7 @@
         <h1 class="">CERÁMICA ETNOGRÁFICA</h1>
         <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero" alt="Typing SVG" /></a>
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
     </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">ENDOFOBIA</h5>
+            <h5 class="card-title">CERÁMICA ETNOGRÁFICA</h5>
             <p class="card-text">
        
 
