--- a/8_DioramaRuka.html
+++ b/8_DioramaRuka.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Orquesta Pandroginia - Sitio 23</title>
+  <title>DIORAMA RUKA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -16,12 +16,10 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">ORQUESTA PANDROGINIA/ SITIO 23</h1>
-        <a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
-            alt="Typing SVG" /></a>
+        <h1 class="">DIORAMA RUKA</h1>
+        
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
     </div>
@@ -34,7 +32,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/orquestaPandroginia.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/8_DioramaRuka.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             <a href="https://juventudpandroginia.tumblr.com/" target="_blank"><img width="60" height="60"
@@ -53,23 +51,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">ORQUESTA PANDROGINIA</h5>
+            <h5 class="card-title">DIORAMA RUKA</h5>
             <p class="card-text">
-              Experimenta un viaje sonoro único con Orquesta Pandroginia, el proyecto de
-              Charli Vásquez en el Festival Sitio 23 <br><br>
-              Charli Vásquez, productora y compositora de Santiago que ha estado explorando
-              las fronteras de la música electrónica desde 2015 a través de proyectos como
-              Orquesta Pandroginia, DJ Daddy Yonqui, Ash U Ra, Espectro Simulado y Team
-              Mekano.<br><br>
-              Charli se sumerge en la remezcla, la recontextualización y el hiperprocesamiento,
-              y la presentación de un imaginario ligado a la navegación digital, siempre
-              impulsada por un interés en el diseño sonoro y la cultura contemporánea.<br><br>
-              Durante años, ha colaborado estrechamente con el colectivo @sellomediooriente y
-              ahora se encuentra a punto de lanzar un nuevo disco.<br><br>
-              Nos vemos el 12 de Octubre desde las 18.20 hrs en el Teatro del Parque Cultural
-              de Valparaíso para conocer el las posibilidades de la música electrónica con la
-              actuación en vivo de Orquesta Pandroginia en el marco del Festival Sitio 23.
-            </p>
+              </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
               src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 
