--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
-            <a href="rapa_nui.html">
+            <a href="11_SalaCanoas.html">
               <img src="asset/img/11_Salacanoas.jpg" class="card-img" alt="...">
             </a>
           </div>
