--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
-            <a href="loica.html">
+            <a href="10_artefactoslíticos.html">
               <img src="asset/img/10_artefactoslíticos.jpg" class="card-img" alt="...">
             </a>
           </div>
