--- a/10_artefactoslíticos.html
+++ b/10_artefactoslíticos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>La Loica - Sitio 23</title>
+  <title>Vitrina ARTEFACTOS LITICOS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -15,12 +15,12 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">LA LOICA / SITIO 23</h1>
+        <h1 class="">ARTEFACTOS LÍTICOS</h1>
         <a href="https://git.io/typing-svg"><img
             src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
             alt="Typing SVG" /></a>
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
     </div>
@@ -33,45 +33,16 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/laLoica.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/10_artefactoslíticos.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
-            <a href="https://www.laloica.com/" target="_blank"><img width="60" height="60"
-                src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a>
-
-            <a href="https://www.instagram.com/laloica" target="_blank"><img width="60" height="60"
-                src="https://img.icons8.com/dotty/80/instagram-new.png" alt="instagram-new" /></a>
-
-            <a href="https://www.youtube.com/@tallerlaloica" target="_blank"><img width="60" height="60"
-                src="https://img.icons8.com/dotty/80/youtube-play.png" alt="youtube-play" /></a>
-
-
-
+           
           </div>
         </div>
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">TALLER LA LOICA</h5>
-            <p class="card-text">Taller La Loica @laloica es un taller de ilustración, diseño y manufactura textil
-              trabajando desde el 2013 en Chile.<br><br>
-              Taller La Loica es Lloyka Pérez, mujer disidente, criadora, persona neurodivergente y activista feminista,
-              artista autodidacta, originaria de Punta Arenas, radicada desde el 2018 en Concepción, desde el 2013, ha
-              dedicado su trabajo creativo en el Taller La Loica.
-              <br><br>
-              El trabajo de Lloyka en La Loica ha estado marcado por el rescate de los oficios heredados de sus abuelas,
-              la costura y el bordado, utilizándolos como soporte para sus diseños e ilustraciones.
-              <br><br>
-              Los diseños e ilustraciones que elabora Lloyka en su trabajo, tienen un especial foco en visibilizar las
-              luchas por la defensa de los derechos de las mujeres y disidencias sexuales, desde una perspectiva
-              feminista antipatriarcal.
-              <br><br>
-              Su trabajo se caracteriza por un obsesivo proceso del pensar. Lloyka plantea en sus creaciones involucrar
-              en todo el proceso, tanto el contexto sociopolítico en el que se crea como el territorio en que está
-              emergiendo la creación, haciendo también ejercicios de memoria y recuperación de oficios y de las personas
-              que han sostenido estos oficios en el tiempo.
-              <br><br>
-              Su obra no se limita a un solo medio, ya que utiliza diversas técnicas, incluyendo el bordado digital, el
-              estampado en vinilo textil y diversas aplicaciones en papelería.
+            <p class="card-text">
             </p>
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/YATI4HS9E6c?si=zhh3R0ZC9kDoWkMq"
               title="YouTube video player" frameborder="0"
@@ -97,7 +68,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-pc-display-horizontal icono"></i>
         </a>
-        <span class="mb-3 mb-md-0">Valparaiso, 2023</span>
+        <span class="mb-3 mb-md-0">Osorno, 2023</span>
       </div>
 
       <ul class="nav  justify-content-end list-unstyled d-flex">
