--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="valentina_camila.html">
+            <a href="2_paleoindio.html">
               <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
