--- a/3_fosiles.html
+++ b/3_fosiles.html
@@ -15,12 +15,9 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">TALLER RATA ELEKTRIKA / SITIO 23</h1>
-        <a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
-            alt="Typing SVG" /></a>
-        <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+        <h1 class="">Fósiles</h1>
+             <p>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
     </div>
