--- a/4_pitren.html
+++ b/4_pitren.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Sindicato Afrodita - Sitio 23</title>
+  <title>Pitrén</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -15,12 +15,9 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">SINDICATO AFRODITA - SHADOWS / SITIO 23</h1>
-        <a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
-            alt="Typing SVG" /></a>
-        <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+        <h1 class="">Pitren</h1>
+                <p>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA </a>
         </p>
       </div>
     </div>
