--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="taller_rata_elektrika.html">
+            <a href="3_fosiles.html">
               <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
@@ -173,7 +173,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="sindicato_shadows.html">
+            <a href="4_pitren.html">
               <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
@@ -181,7 +181,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="nube.html">
+            <a href="5_pitren.html">
               <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
             </a>
           </div>
