--- a/5_pitren.html
+++ b/5_pitren.html
@@ -32,7 +32,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/nube.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/2_VitrinaPaleoindio.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             <!-- <a href="#" target="_blank"><img width="60" height="60"
@@ -51,29 +51,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">NUBE</h5>
+            <h5 class="card-title">PITRÉN</h5>
             <p class="card-text">
-              En Sitio 23 presentamos a Nube y su proyecto de peluquería transmarica. <br><br>
-              Nube es un peluquero transmarica que se dedica hace más de 9 años a la peluquería, por
-              herencia de su abuela, gracias a quien obtuvo sus primeros aprendizajes en este rubro
-              que sería tantas veces no sólo su sustento, sino también su pasión.<br><br>
-              Ha seguido su carrera principalmente de manera autodidacta, también ha tomado cursos,
-              tanto en Argentina como en Chile. Se ha presentado en festivales y ferias en Argentina y
-              Chile, su participación en la primera edición de Jauria Mutante (festival disidente que se
-              realiza en La Plata, Argentina) fue crucial para la creación de una propuesta singular y
-              personalizada en torno a las expresiones no binarias dentro de la estetica del cabello. Ha
-              impartido talleres en Santiago y Valparaíso.<br><br>
-              Actualmente vive con movilidad reducida, lo cual ha hecho replantear su oficio y llevarlo a
-              indagar aspectos inesperados de la vida. Y también de la peluquería. Su principal público
-              es y ha sido la comunidad sexogenérica disidente y las mujeres, en la que su pasión por
-              la estéticas divergentes han podido hacer cuerpo y teñir un mensaje de re-apropiación del
-              espacio público y la resistencia trans marika, lesbica, travesti y disidente.<br><br>
-              Parte esencial de su trabajo ha consistido en descentrar los canones etarios en torno a la
-              esteticas divergentes, que comunmente se asocian solo a la juventud y a la belleza
-              hegemónica.<br><br>
-              Las bellezas son múltiples y la estética puede usarse como un arma de intervención.<br><br>
-              Te invitamos a conocer las expresiones no binarias del talento peluquero de Nube.
-            </p>
+                         </p>
 
           </div>
         </div>
@@ -94,7 +74,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-pc-display-horizontal icono"></i>
         </a>
-        <span class="mb-3 mb-md-0">Valparaiso, 2023</span>
+        <span class="mb-3 mb-md-0">Osorno, 2023</span>
       </div>
 
       <ul class="nav  justify-content-end list-unstyled d-flex">
