--- a/2_VitrinaHibridacion.html
+++ b/2_VitrinaHibridacion.html
@@ -64,7 +64,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-pc-display-horizontal icono"></i>
         </a>
-        <span class="mb-3 mb-md-0">Valparaiso, 2023</span>
+        <span class="mb-3 mb-md-0">Osorno, 2023</span>
       </div>
 
     
