--- a/3_CeramicaEtnografica.html
+++ b/3_CeramicaEtnografica.html
@@ -16,8 +16,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">CERÁMICA ETNOGRÁFICA</h1>
-        <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero" alt="Typing SVG" /></a>
-        <p>
+         <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
@@ -74,7 +73,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-pc-display-horizontal icono"></i>
         </a>
-        <span class="mb-3 mb-md-0">Valparaiso, 2023</span>
+        <span class="mb-3 mb-md-0">Osorno, 2023</span>
       </div>
 
      
