--- a/6_TextilesMapucheWiyiche.html
+++ b/6_TextilesMapucheWiyiche.html
@@ -16,9 +16,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">TEXTILES MAPUCHE</h1>
-        <a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
-            alt="Typing SVG" /></a>
+        
         <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
@@ -41,7 +39,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">KAMILA GOVORCIN</h5>
+            <h5 class="card-title">TEXTILES MAPUCHE</h5>
             <p class="card-text">
              
             </p>
