--- a/7_Joyeria.html
+++ b/7_Joyeria.html
@@ -31,7 +31,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/mube.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/7_VitrinasGemelas.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
            
@@ -40,9 +40,8 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">MUBE</h5>
+            <h5 class="card-title">JOYERÍA MAPUCHE</h5>
             <p class="card-text">
-              Gabriela Vásquez, también conocida como Mube en la escena musical experimental.
               <br><br>
             
 
