--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
-            <a href="maria_rosa_lizama.html">
+            <a href="12_wenteyao.html">
               <img src="asset/img/12_Wenteyao.jpg" class="card-img" alt="...">
             </a>
           </div>
