--- a/10_artefactoslíticos.html
+++ b/10_artefactoslíticos.html
@@ -16,10 +16,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">ARTEFACTOS LÍTICOS</h1>
-        <a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
-            alt="Typing SVG" /></a>
-        <p>
+               <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
@@ -44,10 +41,8 @@
             <h5 class="card-title">ARTEFACTOS LÍTICOS</h5>
             <p class="card-text">
             </p>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/YATI4HS9E6c?si=zhh3R0ZC9kDoWkMq"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 
           </div>
         </div>
