--- a/11_SalaCanoas.html
+++ b/11_SalaCanoas.html
@@ -36,6 +36,8 @@
           <div class="card-body">
             <h5 class="card-title">SALA DE LAS CANOAS</h5>
             <p class="card-text">
+               <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
              </p>
             <!--
             <div class="d-flex justify-content-center align-items-center">
