--- a/9_Trutruka.html
+++ b/9_Trutruka.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Paltamango - Sitio 23</title>
+  <title>Trutruka</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -17,7 +17,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">Trutruka</h1>
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
       </div>
     </div>
   </section>
